@@ -68,6 +68,7 @@
 	   #:make-matrix
 	   #:matrix-elt
 	   #:make-identity
+	   #:make-diagonal
 	   #:do-each-matrix-element
 	   #:do-each-matrix-element-2
 	   #:test-dimensions
@@ -88,6 +89,8 @@
 	   #:create-rotation-matrix
 	   #:create-rotation-from-view
 	   #:create-rotation-from-view-to-view
+	   #:create-uniform-scale-matrix
+	   #:create-scale-matrix
 	   #:to-degrees
 	   #:to-radians
 	   #:l-math-error
